--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MVPExample</string>
+    <string name="now_playing">Now Playing</string>
+    <string name="api_key">6efc30f1fdcbe7425ab08503f07e2762</string>
+    <string name="image_url_path">https://image.tmdb.org/t/p/w92/</string>
+    <string name="error_msg">Unable to load data from internet. We\'ll try again for you &#8230;</string>
 </resources>
